# VelEngES

./: README.md
app/: build.gradle
app/cpp/: CMakeLists.txt  NativeLib.cpp
app/cpp/OpenGL/: VBuffers.cpp  VBuffers.h  VCamera.cpp  VDrawableObject.cpp  VDrawableObject.h  VFBOTextures.h  VFrameBuffer.cpp  VGBuffer.cpp  VGeo.h  VLight.h  VLine.h  VMesh.cpp  VMesh.h  VModel.h  VPlane.cpp  VPlane.h  VRenderer.cpp  VScene.cpp  VScene.h  VTexture.cpp  VTexture.h  VelEngUti.cpp  VelGLES.cpp
app/src/androidTest/java/com/example/t/perc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: TestShader.frag  TestShader.vert
app/src/main/assets/Shaders/: TestShader.frag
app/src/main/java/com/example/t/perc/: GameLibJNIWrapper.java  MainActivity.java  OpenGLActivity.java  SecondActivity.java
app/src/main/java/com/example/t/velengestest/: MainActivity.java  OpenGLActivity.java  SecondActivity.java  VelGesture.java  VelRenderer.java
app/src/main/jni/: CMakeLists.txt  JNIActivity.cpp  JNIGesture.cpp  JNIOpenGL.cpp
app/src/main/jni/OpenGL/: CMakeLists.txt  VCamera.h  VFBOTextures.cpp  VGLSLShader.cpp  VGLSLShader.h  VMaterial.cpp  VModel.cpp  VRenderer.h  VSky.cpp  VVertices.h  VelGLES.h
app/src/main/jni/VelEngEs/: CMakeLists.txt  VAssetManager.cpp  VAssetManager.h  VFramebuffer.h  VGBuffer.h  VGLSLShader.cpp  VGLSLShader.h  VInput.cpp  VInput.h  VLight.cpp  VMaterial.h  VSky.h  VelEngUti.h  VelGLES.cpp  VelGLES.h
app/src/main/res/layout/: activity_main.xml  activity_open_gl.xml  activity_second.xml  content_main.xml  content_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  refs.xml  strings.xml
app/src/test/java/com/example/t/perc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
