set(SOURCE 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VelGLES.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VBuffers.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VCamera.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VDrawableObject.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VFBOTextures.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VFrameBuffer.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VGBuffer.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VGLSLShader.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VLight.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VMaterial.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VMesh.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VModel.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VPlane.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VRenderer.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VScene.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VSky.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VTexture.cpp 
	${SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/VelEngUti.cpp 
	
	
	PARENT_SCOPE)
set(HEADERS 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VelGLES.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VBuffers.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VCamera.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VDrawableObject.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VFBOTextures.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VFramebuffer.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VGBuffer.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VGeo.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VGLSLShader.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VLight.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VLine.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VMaterial.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VMesh.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VModel.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VPlane.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VRenderer.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VScene.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VSky.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VTexture.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VVertices.h 
	${HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/VelEngUti.h 
	PARENT_SCOPE)

add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/glm)